--- a/index.html
+++ b/index.html
@@ -4,20 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="/src/style.css">
   <title>Frontend Mentor | Ping coming soon page</title>
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
     <main>
+        <img src="logo.svg" alt="PING. logo">
         <h1>We are launching soon!</h1>
         <p>Subscribe and get notified</p>
         <form action="">
             <input type="email">
             <button>Notify Me</button>
         </form>
+        <img src="illustration-dashboard.png" alt="">
         <nav>
             <ul>
                 <li><a href="#">Facebook</a></li>
@@ -27,11 +26,8 @@
         </nav>
         <p>&copy; Copyright Ping. All rights reserved.</p>
     </main>
-    <footer>
-        <p class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Your Name Here</a>.
-        </p>
-    </footer>
+    <footer class="signature">
+		<p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://www.ferfalcon.com/" target="_blank">Fer Falcon</a>.</p>
+	</footer>
 </body>
 </html>
