--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <main>
-        <img src="logo.svg" alt="PING. logo">
+        <img class="main-logo" src="logo.svg" alt="PING. logo">
         <h1>We are launching soon!</h1>
         <p>Subscribe and get notified</p>
         <form action="">
             <input type="email">
             <button>Notify Me</button>
         </form>
-        <img src="illustration-dashboard.png" alt="">
+        <img src="illustration-dashboard.png" alt="Ping Dashboard">
         <nav>
             <ul>
                 <li><a href="#">Facebook</a></li>
