--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="/src/style.css">
-  <title>Frontend Mentor | Ping coming soon page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/src/style.css">
+    <title>Frontend Mentor | Ping coming soon page</title>
 </head>
 <body>
     <main class="main-wrapper">
         <img class="main-logo" src="logo.svg" alt="PING. logo">
-        <h1>We are launching soon!</h1>
+        <h1 class="main-heading">We are launching <strong>soon!</strong></h1>
         <p>Subscribe and get notified</p>
         <form action="">
             <input type="email">
