--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <main class="main-wrapper">
         <img class="main-logo" src="logo.svg" alt="PING. logo">
         <h1 class="main-heading">We are launching <strong>soon!</strong></h1>
-        <p>Subscribe and get notified</p>
-        <form action="">
-            <input type="email">
-            <button>Notify Me</button>
+        <form class="main-form" action="">
+            <label class="main-form__label" for="email">Subscribe and get notified</label>
+            <input class="main-form__email-input" type="email" id="email" name="email" placeholder="Your email address…" autocomplete="on" required>
+            <button class="main-form__button">Notify Me</button>
         </form>
         <img src="illustration-dashboard.png" alt="Ping Dashboard">
         <nav class="social-nav">
@@ -27,7 +27,7 @@
                 <li><a class="social-nav__link   social-nav__link--instagram" href="#">Instagram</a></li>
             </ul>
         </nav>
-        <p>&copy; Copyright Ping. All rights reserved.</p>
+        <p class="copyright">&copy; Copyright Ping. All rights reserved.</p>
     </main>
     <footer class="visually-hidden">
 		<p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://www.ferfalcon.com/" target="_blank">Fer Falcon</a>.</p>
