--- a/index.html
+++ b/index.html
@@ -22,9 +22,24 @@
         <img src="illustration-dashboard.png" alt="Ping Dashboard">
         <nav class="social-nav">
             <ul class="social-nav__list   remove-list-defaults">
-                <li><a class="social-nav__link   social-nav__link--facebook" href="#">Facebook</a></li>
-                <li><a class="social-nav__link   social-nav__link--twitter" href="#">Twitter</a></li>
-                <li><a class="social-nav__link   social-nav__link--instagram" href="#">Instagram</a></li>
+                <li>
+                    <a class="social-nav__link" href="#">
+                        <img class="social-nav__image" src="facebook-f-brands-solid-full.svg" alt="Facebook">
+                        <span class="visually-hidden">Facebook</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="social-nav__link" href="#">
+                        <img class="social-nav__image   social-nav__image--twitter" src="twitter-brands-solid-full.svg" alt="Twitter">
+                        <span class="visually-hidden">Twitter</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="social-nav__link" href="#">
+                        <img class="social-nav__image   social-nav__image--instagram" src="instagram-brands-solid-full.svg" alt="Instagram">
+                        <span class="visually-hidden">Instagram</span>
+                    </a>
+                </li>
             </ul>
         </nav>
         <p class="copyright">&copy; Copyright Ping. All rights reserved.</p>
