--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <form class="main-form" action="">
             <label class="main-form__label" for="email">Subscribe and get notified</label>
             <input class="main-form__email-input" type="email" id="email" name="email" placeholder="Your email address…" autocomplete="on" required>
+            <p class="validation-message" id="validationMessage"></p>
             <button class="main-form__button">Notify Me</button>
         </form>
         <img src="illustration-dashboard.png" alt="Ping Dashboard">
@@ -47,5 +48,6 @@
     <footer class="visually-hidden">
 		<p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://www.ferfalcon.com/" target="_blank">Fer Falcon</a>.</p>
 	</footer>
+    <script type="module" src="/src/scripts.js"></script>
 </body>
 </html>
