File relocation css/js

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100..900&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="/src/style.css" />
+    <link rel="stylesheet" href="/src/styles/style.css" />
     <title>Frontend Mentor | Ping coming soon page</title>
   </head>
   <body>
@@ -59,6 +59,6 @@
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://www.ferfalcon.com/" target="_blank">Fer Falcon</a>.
       </p>
     </footer>
-    <script type="module" src="/src/scripts.js"></script>
+    <script type="module" src="/src/scripts/script.js"></script>
   </body>
 </html>
