Pixel perfect test tablet

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p class="validation-message" id="validationMessage"></p>
         <button class="main-form__button">Notify Me</button>
       </form>
-      <img src="illustration-dashboard.png" alt="Ping Dashboard" />
+      <img class="main-banner" src="illustration-dashboard.png" alt="Ping Dashboard" />
       <nav class="social-nav">
         <ul class="social-nav__list remove-list-defaults">
           <li>
